--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -68,6 +68,9 @@ img {
 }
 
 .todo-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: var(--theme-color);
     padding: 1rem;
     margin-bottom: 2rem;
@@ -82,6 +85,7 @@ img {
 
 .add-todo {
     display: flex;
+    justify-self: center;
     flex-direction: column;
     gap: .5rem;
     flex-wrap: wrap;
